--- a/index.html
+++ b/index.html
@@ -443,6 +443,8 @@
             <li class="toc-item" data-target="个人简介">个人简介</li>
             <li class="toc-item" data-target="职业技能">职业技能</li>
             <li class="toc-item" data-target="副业思路">副业思路</li>
+            <li class="toc-item" data-target="商业思维">商业思维</li>
+            <li class="toc-item" data-target="用户生命周期">用户生命周期</li>
             <li class="toc-item" data-target="持续计划">持续计划</li>
             <li class="toc-item" data-target="自我评价/期望">自我评价</li>
             <li class="toc-item" data-target="兴趣爱好">兴趣爱好</li>
@@ -1961,6 +1963,246 @@
             </ul>
         </section>
 
+        <!-- 用户生命周期 -->
+        <section class="work info-unit card">
+            <h2>
+                <i class="fa fa-users" aria-hidden="true"></i>用户生命周期</h2>
+            <hr/>
+
+            <!-- 引流(Acquisition) -->
+            <h3 style="color: #3498db; margin-top: 20px;"><i class="fa fa-cloud-download" aria-hidden="true"></i> <span><b>引流(Acquisition)：</b>把潜在客户吸引到你的业务中来。通过各种渠道（广告、内容营销、社交媒体、SEO等）让更多人知道你。</span></h3>
+            <ul>
+                <li>
+                    <i class="fa fa-line-chart" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span><b>关键指标：</b>曝光量、点击率、访问量、新用户数、获客成本(CAC)、渠道转化率</span>
+                </li>
+                <li>
+                    <i class="fa fa-rocket" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span><b>提升方法：</b></span>
+                </li>
+                <ul style="margin-left: 30px;">
+                    <li>
+                        <i class="fa fa-search" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>SEO优化：</b>通过关键词研究工具(如百度指数、Google Keyword Planner)找到高搜索量低竞争的关键词，在标题、描述、正文中合理布局，提升搜索引擎自然排名</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-bullhorn" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>精准广告投放：</b>利用Facebook Ads Manager、Google Ads等平台的受众定位功能，根据年龄、兴趣、行为等维度精准投放，通过A/B测试不断优化广告素材和文案</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-pencil" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>内容营销：</b>定期发布高质量原创内容，如技术教程、行业分析报告等，通过内容价值吸引目标用户，建立专业权威形象</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-users" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>社交媒体运营：</b>在微博、微信公众号、知乎等平台建立官方账号，定期发布内容并与粉丝互动，通过社交传播扩大影响力</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-star" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>KOL合作：</b>与行业内有影响力的意见领袖合作，通过他们的推荐或评测来提升品牌知名度和信任度</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-gift" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>活动推广：</b>举办线上研讨会、技术分享会、限时优惠活动等，通过活动吸引潜在用户参与并留下联系方式</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-desktop" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>落地页优化：</b>通过热图分析工具(如Hotjar)了解用户行为，优化页面布局、CTA按钮位置和文案，提升页面转化率</span>
+                    </li>
+                </ul>
+            </ul>
+
+            <!-- 激活(Activation) -->
+            <h3 style="color: #2ecc71; margin-top: 20px;"><i class="fa fa-bolt" aria-hidden="true"></i> <span><b>激活(Activation)：</b>让初次接触你的用户产生第一次正面体验。比如注册账号、使用核心功能、完成首次购买。关键是要降低用户使用门槛，快速展示产品价值。</span></h3>
+            <ul>
+                <li>
+                    <i class="fa fa-line-chart" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span><b>关键指标：</b>注册转化率、首单转化率、活跃用户数、新用户激活率、首次使用时长、关键功能使用率</span>
+                </li>
+                <li>
+                    <i class="fa fa-rocket" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span><b>提升方法：</b></span>
+                </li>
+                <ul style="margin-left: 30px;">
+                    <li>
+                        <i class="fa fa-user" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>简化注册流程：</b>采用手机号一键登录、微信授权登录等方式减少注册步骤，降低用户流失率</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-graduation-cap" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>新手引导设计：</b>通过交互式引导、视频教程、操作提示等方式帮助用户快速上手核心功能</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-gift" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>首单优惠策略：</b>提供新人专享折扣、首单免费试用、满减优惠券等方式激励用户完成首次付费</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-flask" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>A/B测试优化：</b>对页面布局、按钮文案、颜色搭配等元素进行A/B测试，找出最优转化方案</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-tachometer" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>提升页面加载速度：</b>通过CDN加速、图片压缩、代码优化等技术手段将页面加载时间控制在3秒以内</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-smile-o" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>优化用户体验：</b>通过用户反馈收集、可用性测试等方式持续改进产品体验，减少用户操作障碍</span>
+                    </li>
+                </ul>
+            </ul>
+
+            <!-- 留存(Retention) -->
+            <h3 style="color: #f39c12; margin-top: 20px;"><i class="fa fa-anchor" aria-hidden="true"></i> <span><b>留存(Retention)：</b>让用户持续使用你的产品或服务，形成使用习惯。通过推送通知、邮件营销、会员体系等方式保持用户粘性。</span></h3>
+            <ul>
+                <li>
+                    <i class="fa fa-line-chart" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span><b>关键指标：</b>次日留存率、7日留存率、月活跃用户数(MAU)、用户活跃频率、用户生命周期(LTV)、流失率</span>
+                </li>
+                <li>
+                    <i class="fa fa-rocket" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span><b>提升方法：</b></span>
+                </li>
+                <ul style="margin-left: 30px;">
+                    <li>
+                        <i class="fa fa-magic" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>个性化推荐：</b>基于用户行为数据(浏览记录、购买历史等)构建推荐算法，推送用户感兴趣的内容或产品</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-bell" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>定期推送有价值内容：</b>通过邮件、短信、APP推送等方式定期发送个性化内容，如行业资讯、使用技巧、优惠信息等</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-trophy" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>会员权益体系：</b>设计多层次会员等级制度，提供专属折扣、优先服务、生日特权等差异化权益</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-star" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>积分奖励机制：</b>建立积分商城，用户通过签到、分享、评论等行为获得积分，积分可兑换礼品或优惠券</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-comments" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>社区互动：</b>建立用户社区，鼓励用户分享使用经验、参与话题讨论，增强用户归属感</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-refresh" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>产品功能迭代：</b>定期收集用户反馈，快速响应用户需求，持续优化产品功能和体验</span>
+                    </li>
+                </ul>
+            </ul>
+
+            <!-- 转化(Revenue) -->
+            <h3 style="color: #e74c3c; margin-top: 20px;"><i class="fa fa-shopping-cart" aria-hidden="true"></i> <span><b>转化(Revenue)：</b>让用户为你的产品或服务付费。通过价格策略、套餐设计、限时优惠等方式促进用户付费。</span></h3>
+            <ul>
+                <li>
+                    <i class="fa fa-line-chart" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span><b>关键指标：</b>付费转化率、客单价、复购率、ARPU值(每用户平均收入)、LTV(用户生命周期价值)、收入增长率</span>
+                </li>
+                <li>
+                    <i class="fa fa-rocket" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span><b>提升方法：</b></span>
+                </li>
+                <ul style="margin-left: 30px;">
+                    <li>
+                        <i class="fa fa-tags" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>分层定价策略：</b>设计基础版、专业版、企业版等多层次产品套餐，满足不同用户需求和支付能力</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-cubes" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>套餐组合优化：</b>将相关产品打包销售，如"课程+书籍+源码"组合套餐，提升客单价</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-clock-o" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>限时促销活动：</b>通过节日促销、限时折扣、秒杀活动等方式制造紧迫感，刺激用户立即购买</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-star-o" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>会员专属权益：</b>为付费会员提供独家内容、优先体验新功能、专属客服等特权，提升会员价值感知</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-exchange" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>交叉销售：</b>在用户购买某产品后推荐相关或互补产品，如购买Java课程后推荐SpringCloud进阶课程</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-plus" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>增值服务推荐：</b>提供一对一咨询、定制化开发、企业培训等高价值增值服务，提升ARPU值</span>
+                    </li>
+                </ul>
+            </ul>
+
+            <!-- 推荐(Referral) -->
+            <h3 style="color: #9b59b6; margin-top: 20px;"><i class="fa fa-share-alt" aria-hidden="true"></i> <span><b>推荐(Referral)：</b>让满意的用户主动为你推广，形成口碑传播。通过推荐奖励、邀请机制、社交分享等方式激励用户推荐新客户。</span></h3>
+            <ul>
+                <li>
+                    <i class="fa fa-line-chart" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span><b>关键指标：</b>推荐率、病毒系数(K因子)、新用户来源占比、口碑传播效果、社交媒体分享量、推荐转化率</span>
+                </li>
+                <li>
+                    <i class="fa fa-rocket" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span><b>提升方法：</b></span>
+                </li>
+                <ul style="margin-left: 30px;">
+                    <li>
+                        <i class="fa fa-gift" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>推荐奖励机制：</b>设计"邀请好友得奖励"活动，邀请者和被邀请者均可获得优惠券、积分或现金奖励</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-users" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>邀请好友活动：</b>举办邀请排行榜活动，设置不同档位奖励，激励用户积极邀请好友</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-share" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>社交分享功能：</b>在产品中集成一键分享功能，方便用户将优质内容分享到微信、微博等社交平台</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-commenting" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>用户口碑管理：</b>建立用户评价体系，鼓励满意用户留下好评，及时处理负面评价并公开改进措施</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-headphones" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>优质客户服务：</b>提供7*24小时客服支持，快速响应用户问题，提升用户满意度和推荐意愿</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-users" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>社区建设：</b>建立用户社群，定期组织线上线下活动，增强用户归属感和品牌忠诚度</span>
+                    </li>
+                </ul>
+            </ul>
+
+            <!-- 模型特点与优化策略 -->
+            <h3 style="color: #1abc9c; margin-top: 20px;"><i class="fa fa-recycle" aria-hidden="true"></i> 模型特点与优化策略</h3>
+            <ul>
+                <li>
+                    <i class="fa fa-recycle" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span><b>模型特点：</b>这是一个循环过程，不是线性流程。用户在任何一个环节流失，都需要重新开始。成功的商业模式需要在每个环节都设置"面包屑"，引导用户走向下一个阶段。</span>
+                </li>
+                <li>
+                    <i class="fa fa-line-chart" aria-hidden="true" style="margin-right: 8px; color: #1abc9c;"></i>
+                    <span><b>综合优化策略：</b></span>
+                </li>
+                <ul style="margin-left: 30px;">
+                    <li>
+                        <i class="fa fa-filter" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>漏斗分析：</b>使用Google Analytics、百度统计等工具分析各环节转化率，找出流失率最高的环节进行重点优化</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-flask" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>A/B测试：</b>对关键页面、功能、文案进行A/B测试，通过数据验证找出最优方案</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-bar-chart" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>用户行为追踪：</b>使用Mixpanel、神策数据等用户行为分析工具，深入了解用户使用路径和行为偏好</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-comments-o" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>用户调研：</b>定期进行用户访谈、问卷调查，收集用户反馈，了解用户真实需求和痛点</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-refresh" aria-hidden="true" style="margin-right: 5px; color: #16a085;"></i>
+                        <span><b>持续迭代：</b>建立敏捷开发流程，快速响应市场变化和用户需求，持续优化产品和服务</span>
+                    </li>
+                </ul>
+            </ul>
+        </section>
 
         <!-- 持续计划 -->
         <section class="work info-unit card">
